[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walless_utils"
version = "2.4.8"
description = "walless utils"
authors = [
    { name = "hiaoxui", email = "wallesspku@gmail.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["walless_utils", "walless_utils.objects", "walless_utils.api", "walless_utils.global_obj"]
